--- a/browser/themes/osx/newtab/newTab.css
+++ b/browser/themes/osx/newtab/newTab.css
@@ -139,7 +139,6 @@
 
 /* TITLES */
 .newtab-title {
-  bottom: -20px;
   color: #525c66;
   font-family: Lucida Grande;
   font-size: 13px;
